[ADD] Team Members

--- a/index.html
+++ b/index.html
@@ -106,93 +106,31 @@
 					<p>Our Researchers and Fellows:</p>
 					<div class="row 100%">
 						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/santiago.jpg" alt="" /></span>
-							<h3><a href="https://www.researchgate.net/profile/Carlos_Santiago6">Carlos Santiago</a></h3>
-							<p>Junior Researcher</p>
-							<ul class="actions">
-								<li><a href="http://welcome.isr.tecnico.ulisboa.pt/author/carlosjorgemariz/" class="button">More</a></li>
-							</ul>
+							<span class="image fit"><img src="images/EIA_team/Andre.jpg" alt="" /></span>
+							<h3><a>Andre Fadiga</a></h3>
+							<p>CPO</p>
 						</div>
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/calisto.jpg" alt="" /></span>
-							<h3><a href="http://fmcalisto.github.io/">Francisco Maria Calisto</a></h3>
-							<p>PhD Candidate</p>
-							<ul class="actions">
-								<li><a href="https://web.tecnico.ulisboa.pt/francisco.calisto" class="button">More</a></li>
-							</ul>
+							<h3><a>Francisco Maria Calisto</a></h3>
+							<p>CEO</p>					
 						</div>
 						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/lencastre.png" alt="" /></span>
-							<h3><a href="https://github.com/HugoLencastre">Hugo Lencastre</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Hugo_Lencastre" class="button">More</a></li>
-							</ul>
+							<span class="image fit"><img src="images/EIA_team/Mastan.jpg" alt="" /></span>
+							<h3><a>Masoumeh Vejdannia</a></h3>
+							<p>CTO</p>
 						</div>
 						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/nascimento.jpg" alt="" /></span>
-							<h3><a href="http://users.isr.ist.utl.pt/~jan/">Jacinto Nascimento</a></h3>
-							<p>Associate Professor (Coordinator)</p>
-							<ul class="actions">
-								<li><a href="http://welcome.isr.tecnico.ulisboa.pt/author/jacintocarlosmarquespeixotodo/" class="button">More</a></li>
-							</ul>
+							<span class="image fit"><img src="images/EIA_team/Kyle.jpg" alt="" /></span>
+							<h3><a>Kyle Lee</a></h3>
+							<p>CMO/CFO</p>
 						</div>
 						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/diogo.jpg" alt="" /></span>
-							<h3><a href="https://github.com/pedroomd">João Diogo</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.linkedin.com/in/pedro-diogo-456006190/" class="button">More</a></li>
-							</ul>
+							<span class="image fit"><img src="images/EIA_team/Livia.jpg" alt="" /></span>
+							<h3><a>Livia Barros Ferreira</a></h3>
+							<p>CDO</p>
 						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/joao.jpg" alt="" /></span>
-							<h3><a href="https://github.com/joaobernardoct">João Bernardo Tavares</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Joao_Tavares28" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/madalena.jpg" alt="" /></span>
-							<h3><a href="https://github.com/menapedreira">Madalena Pedreira</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Madalena_Pedreira" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/margarida.jpg" alt="" /></span>
-							<h3><a href="https://github.com/MargaridaMorais">Margarida Morais</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://github.com/MargaridaMorais" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/bastos.jpg" alt="" /></span>
-							<h3><a href="https://github.com/mbastos99">Miguel Bastos</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://github.com/mbastos99" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/mourao.png" alt="" /></span>
-							<h3><a href="https://github.com/nadia-mourao">Nádia Mourão</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Nadia_Mourao" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u$ 6u$(medium)">
-							<span class="image fit"><img src="images/nunes.jpg" alt="" /></span>
-							<h3><a href="http://nunonunes.info/">Nuno Nunes</a></h3>
-							<p>Full Professor</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Nuno_Nunes2" class="button">More</a></li>
-							</ul>
-						</div>
+
 					</div>
 
 				</div>
