--- a/index.html
+++ b/index.html
@@ -1,51 +1,67 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>MIMBCD-UI</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="apple-touch-icon" sizes="57x57" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-16x16.png">
-		<link rel="manifest" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
-		<meta property="og:title" content="MIMBCD-UI">
-		<meta property="og:description" content="Medical Imaging Multimodality Breast Cancer Diagnosis User Interface Project">
-		<meta property="og:image" content="https://github.com/MIMBCD-UI/meta/raw/master/headers/breast_cancer_women.png?raw=true">
-		<meta property="og:url" content="https://mimbcd-ui.github.io/">
-		<meta property="og:site_name" content="MIMBCD-UI">
-		<meta name="twitter:title" content="MIMBCD-UI">
-		<meta name="twitter:description" content="Medical Imaging Multimodality Breast Cancer Diagnosis User Interface Project">
-		<meta name="twitter:image" content="https://github.com/MIMBCD-UI/meta/raw/master/headers/breast_cancer_women.png?raw=true">
-		<meta name="twitter:image:alt" content="MIMBCD-UI">
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@opprGroup">
-		<meta property="fb:app_id" content="1233333316741054" />
-	</head>
+<head>
+	<style>
+		/* Override existing styles and set the width for each image container */
+		.row .2u {
+			width: 20%;
+		}
+
+		/* Optional: Adjust the space between image containers */
+		.row .2u {
+			margin-right: 0.5%;
+		}
+
+			/* Optional: Remove the right margin for the last image container in the row */
+			.row .2u:last-child {
+				margin-right: 0;
+			}
+	</style>
+	<title>MIMBCD-UI</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<link rel="apple-touch-icon" sizes="57x57" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/favicon-16x16.png">
+	<link rel="manifest" href="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="https://github.com/MIMBCD-UI/mimbcd-ui.github.io/blob/master/images/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<meta property="og:title" content="MIMBCD-UI">
+	<meta property="og:description" content="Medical Imaging Multimodality Breast Cancer Diagnosis User Interface Project">
+	<meta property="og:image" content="https://github.com/MIMBCD-UI/meta/raw/master/headers/breast_cancer_women.png?raw=true">
+	<meta property="og:url" content="https://mimbcd-ui.github.io/">
+	<meta property="og:site_name" content="MIMBCD-UI">
+	<meta name="twitter:title" content="MIMBCD-UI">
+	<meta name="twitter:description" content="Medical Imaging Multimodality Breast Cancer Diagnosis User Interface Project">
+	<meta name="twitter:image" content="https://github.com/MIMBCD-UI/meta/raw/master/headers/breast_cancer_women.png?raw=true">
+	<meta name="twitter:image:alt" content="MIMBCD-UI">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@opprGroup">
+	<meta property="fb:app_id" content="1233333316741054" />
+</head>
 	<body>
 
 			<!-- Header -->
 			<section id="header">
 				<div class="inner">
 					<img src="images/logo100x100.png" alt="logo" />
-					<h1>MIMBCD-UI</h1>
-					<p>Medical Imaging Multimodality Breast Cancer Diagnosis User Interface (<strong>MIMBCD-UI</strong>) Project<br/>
+					<h1>BS-AI</h1>
+					<p>Medical Imaging Multimodality Breast Cancer Diagnosis User Interface (<strong>BS-AI</strong>) Project<br/>
 					involves the collaborative effort of three Portuguese Research Institutions: <a href="http://welcome.isr.tecnico.ulisboa.pt/">ISR-Lisboa</a>, <a href="http://iti.larsys.pt/">ITI</a> and <a href="http://www.inesc-id.pt/">INESC-ID</a> from <a href="https://tecnico.ulisboa.pt/">IST</a>.</p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
@@ -61,7 +77,7 @@
 							<header class="major">
 								<h2>About</h2>
 							</header>
-							<p>The project is being developed by the Associated Laboratory - <a href="http://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics (ISR-Lisboa)</a>. This project proposes the development of a methodology for detection and cancer targeting breast using multimodality medical imaging and textual information. The <a href="https://mimbcd-ui.github.io/">MIMBCD-UI</a> research is serving both <a href="https://mida-project.github.io/">MIDA</a> and <a href="https://breastscreening.github.io/">BreastScreening</a> works.</p>
+							<p>BreastScreaning-AI is a start-up participating in European Innovation Academy 2023. Our team of five is dedicated to developing a multimodal AI tool for early breast cancer detection. Using mammogram, MRI, and ultrasound data, our goal is to improve accuracy and save lives through timely intervention. Together, we strive to make a lasting impact on global healthcare.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/deep-learning.png" alt="" /></span>
@@ -88,9 +104,12 @@
 							<header class="major">
 								<h2>Project Description</h2>
 							</header>
-							<p>MIMBCD-UI Project deals with the use of a recently proposed technique in literature: <a href="https://en.wikipedia.org/wiki/Convolutional_neural_network">Deep Convolutional Neural Networks (CNNs)</a>. These deep networks will incorporate information from several different modes: magnetic resonance imaging volumes (MRI), ultrasound images, mammographic images (both views <a href="https://radiopaedia.org/articles/craniocaudal-view">CC</a> and <a href="https://radiopaedia.org/articles/mediolateral-oblique-view">MLO</a>) and text.</p>
-							<p>The proposed algorithm, called for multimodality CNNs (MMCNNs) will have the ability to process multimodal information at an unified and sustained manner. This methodology needs to "learn" what are the masses and calcifications. So that is necessary to collect the <a href="https://en.wikipedia.org/wiki/Ground_truth">ground-truth</a>, or notes of the masses and calcifications provided by medical experts.</p>
-							<p>For the collection of these notes, the design and development of an interface is necessary allows the user (in this case, the medical specialist) to display various types of image (i.e., ultrasound, MRI and mammography), and that also allows for user interaction, particularly in providing the notes of the masses and calcifications. For these reasons, it is crucial for the development of this project, cooperation with experts providing the above notes.</p>
+							<p>BreastScreaning-AI focuses on developing an advanced AI-powered system capable of analyzing mammograms, MRI scans, and ultrasound images for the early detection of breast cancer. The integration of multiple imaging modalities enables our AI tool, named multimodality CNNs (MMCNNs), to process information in a comprehensive and unified manner.</p>
+							<h2>Why BreastScreaning-AI?</h2>
+							<p>Breast cancer is a significant global health concern, and early detection is crucial for effective treatment. Unfortunately, conventional screening methods sometimes result in False Negative and False-Positive results, leading to delayed diagnosis or unnecessary biopsies. BreastScreaning-AI aims to address these challenges by providing accurate and reliable diagnostic assistance to radiologists, clinicians, and hospitals.</p>
+							<h2>Our Vision:</h2>
+							<p>BreastScreaning-AI envisions a future where early breast cancer detection is no longer an elusive goal. By leveraging cutting-edge AI technology and collaborating with medical experts, we strive to make breast cancer screening more accessible, accurate, and efficient for healthcare providers worldwide.</p>
+							<p>Join us on this transformative journey to save lives and make a lasting impact on breast cancer detection. Together, we can create a world where early diagnosis becomes a reality, leading to better patient outcomes and an improved quality of life for countless individuals.</p>
 						</div>
 					</div>
 				</div>
@@ -98,6 +117,7 @@
 
 			<!-- Three -->
 			<section id="three" class="main style1 special">
+
 				<div class="container">
 
 					<header class="major">
@@ -107,28 +127,28 @@
 					<div class="row 100%">
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Andre.jpg" alt="" /></span>
-							<h3><a>Andre Fadiga</a></h3>
-							<p>CPO</p>
+							<h3 style="font-size: 18px;"><a>Andre Fadiga</a></h3>
+							<p style="font-size: 14px;">CPO</p>
 						</div>
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/calisto.jpg" alt="" /></span>
-							<h3><a>Francisco Maria Calisto</a></h3>
-							<p>CEO</p>					
+							<h3 style="font-size: 18px;"><a>Francisco Maria Calisto</a></h3>
+							<p style="font-size: 14px;">CEO</p>					
 						</div>
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Mastan.jpg" alt="" /></span>
-							<h3><a>Masoumeh Vejdannia</a></h3>
-							<p>CTO</p>
+							<h3 style="font-size: 18px;"><a>Masoumeh Vejdannia</a></h3>
+							<p style="font-size: 14px;">CTO</p>
 						</div>
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Kyle.jpg" alt="" /></span>
-							<h3><a>Kyle Lee</a></h3>
-							<p>CMO/CFO</p>
+							<h3 style="font-size: 18px;"><a>Kyle Lee</a></h3>
+							<p style="font-size: 14px;">CMO/CFO</p>
 						</div>
 						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Livia.jpg" alt="" /></span>
-							<h3><a>Livia Barros Ferreira</a></h3>
-							<p>CDO</p>
+							<h3 style="font-size: 18px;"><a>Livia Barros Ferreira</a></h3>
+							<p style="font-size: 14px;">CDO</p>
 						</div>
 
 					</div>
@@ -136,51 +156,7 @@
 				</div>
 			</section>
 
-			<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
 
-					<header class="major">
-						<h2>Support Researchers</h2>
-					</header>
-					<p>Our Support Researchers, Fellows and Interns:</p>
-					<div class="row 100%">
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/ferreira.jpg" alt="" /></span>
-							<h3><a href="http://alfredoferreira.eu/">Alfredo Ferreira</a></h3>
-							<p>Assistant Professor</p>
-							<ul class="actions">
-								<li><a href="http://www.inesc-id.pt/member.php?pid=249" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/cardoso.jpg" alt="" /></span>
-							<h3><a href="http://web.tecnico.ulisboa.pt/bruno.f.cardoso/">Bruno Cardoso</a></h3>
-							<p>MSc Student</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Pedro_Miraldo" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/goncalves.jpg" alt="" /></span>
-							<h3><a href="http://danielgoncalves.info">Daniel Gon&ccedil;alves</a></h3>
-							<p>Associate Professor</p>
-							<ul class="actions">
-								<li><a href="http://www.inesc-id.pt/member.php?pid=317" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="3u 6u$(medium)">
-							<span class="image fit"><img src="images/miraldo.jpg" alt="" /></span>
-							<h3><a href="http://users.isr.tecnico.ulisboa.pt/~pmiraldo">Pedro Miraldo</a></h3>
-							<p>Junior Researcher</p>
-							<ul class="actions">
-								<li><a href="https://www.researchgate.net/profile/Pedro_Miraldo" class="button">More</a></li>
-							</ul>
-						</div>
-					</div>
-
-				</div>
-			</section>
 
 			<!-- Three -->
 			<section id="three" class="main style1 special">
