--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			<section id="header">
 				<div class="inner">
 					<img src="images/logo100x100.png" alt="logo" />
-					<h1>BS-AI</h1>
-					<p>Medical Imaging Multimodality Breast Cancer Diagnosis User Interface (<strong>BS-AI</strong>) Project<br/>
+					<h1>BreastScreaning-AI</h1>
+					<p>Medical Imaging Multimodality BreastScreaning-AI(<strong>BS-AI</strong>) User Interface  Project<br/>
 					involves the collaborative effort of three Portuguese Research Institutions: <a href="http://welcome.isr.tecnico.ulisboa.pt/">ISR-Lisboa</a>, <a href="http://iti.larsys.pt/">ITI</a> and <a href="http://www.inesc-id.pt/">INESC-ID</a> from <a href="https://tecnico.ulisboa.pt/">IST</a>.</p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
