--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
 	<body>
 
 			<!-- Header -->
-			<section id="header">
+			<section id="header" >
 				<div class="inner">
-					<img src="images/logo100x100.png" alt="logo" />
-					<h1>BreastScreaning-AI</h1>
-					<p>Medical Imaging Multimodality BreastScreaning-AI(<strong>BS-AI</strong>) User Interface  Project<br/>
-					involves the collaborative effort of three Portuguese Research Institutions: <a href="http://welcome.isr.tecnico.ulisboa.pt/">ISR-Lisboa</a>, <a href="http://iti.larsys.pt/">ITI</a> and <a href="http://www.inesc-id.pt/">INESC-ID</a> from <a href="https://tecnico.ulisboa.pt/">IST</a>.</p>
+					<img src="images/logo-bs-ai-2.svg" alt="logo" />
+					<h1 style="color: black;">BreastScreening-AI</h1>
+					<p style="color: black;">Innovating Early Detection of Breast Cancer, Saving Lives.<br/>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -70,14 +69,14 @@
 			</section>
 
 			<!-- One -->
-			<section id="one" class="main style1">
+			<section id="one" class="main style1" >
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
-							<header class="major">
+							<header class="major" style="color: black;">
 								<h2>About</h2>
 							</header>
-							<p>BreastScreaning-AI is a start-up participating in European Innovation Academy 2023. Our team of five is dedicated to developing a multimodal AI tool for early breast cancer detection. Using mammogram, MRI, and ultrasound data, our goal is to improve accuracy and save lives through timely intervention. Together, we strive to make a lasting impact on global healthcare.</p>
+							<p style="color: black;">BreastScreening-AI is a start-up participating in European Innovation Academy 2023. Our team of five is dedicated to developing a multimodal AI tool for early breast cancer detection. Using mammogram, MRI, and ultrasound data, our goal is to improve accuracy and save lives through timely intervention. Together, we strive to make a lasting impact on global healthcare.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/deep-learning.png" alt="" /></span>
@@ -104,11 +103,11 @@
 							<header class="major">
 								<h2>Project Description</h2>
 							</header>
-							<p>BreastScreaning-AI focuses on developing an advanced AI-powered system capable of analyzing mammograms, MRI scans, and ultrasound images for the early detection of breast cancer. The integration of multiple imaging modalities enables our AI tool, named multimodality CNNs (MMCNNs), to process information in a comprehensive and unified manner.</p>
-							<h2>Why BreastScreaning-AI?</h2>
-							<p>Breast cancer is a significant global health concern, and early detection is crucial for effective treatment. Unfortunately, conventional screening methods sometimes result in False Negative and False-Positive results, leading to delayed diagnosis or unnecessary biopsies. BreastScreaning-AI aims to address these challenges by providing accurate and reliable diagnostic assistance to radiologists, clinicians, and hospitals.</p>
+							<p>BreastScreening-AI focuses on developing an advanced AI-powered system capable of analyzing mammograms, MRI scans, and ultrasound images for the early detection of breast cancer. The integration of multiple imaging modalities enables our AI tool, named multimodality CNNs (MMCNNs), to process information in a comprehensive and unified manner.</p>
+							<h2>Why BreastScreening-AI?</h2>
+							<p>Breast cancer is a significant global health concern, and early detection is crucial for effective treatment. Unfortunately, conventional screening methods sometimes result in False Negative and False-Positive results, leading to delayed diagnosis or unnecessary biopsies. BreastScreening-AI aims to address these challenges by providing accurate and reliable diagnostic assistance to radiologists, clinicians, and hospitals.</p>
 							<h2>Our Vision:</h2>
-							<p>BreastScreaning-AI envisions a future where early breast cancer detection is no longer an elusive goal. By leveraging cutting-edge AI technology and collaborating with medical experts, we strive to make breast cancer screening more accessible, accurate, and efficient for healthcare providers worldwide.</p>
+							<p>BreastScreening-AI envisions a future where early breast cancer detection is no longer an elusive goal. By leveraging cutting-edge AI technology and collaborating with medical experts, we strive to make breast cancer screening more accessible, accurate, and efficient for healthcare providers worldwide.</p>
 							<p>Join us on this transformative journey to save lives and make a lasting impact on breast cancer detection. Together, we can create a world where early diagnosis becomes a reality, leading to better patient outcomes and an improved quality of life for countless individuals.</p>
 						</div>
 					</div>
@@ -123,29 +122,29 @@
 					<header class="major">
 						<h2>Team</h2>
 					</header>
-					<p>Our Researchers and Fellows:</p>
+					<p>Our Team Members:</p>
 					<div class="row 100%">
-						<div class="4u 6u$(medium)">
+						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Andre.jpg" alt="" /></span>
 							<h3 style="font-size: 18px;"><a>Andre Fadiga</a></h3>
 							<p style="font-size: 14px;">CPO</p>
 						</div>
-						<div class="4u 6u$(medium)">
+						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/calisto.jpg" alt="" /></span>
 							<h3 style="font-size: 18px;"><a>Francisco Maria Calisto</a></h3>
 							<p style="font-size: 14px;">CEO</p>					
 						</div>
-						<div class="4u 6u$(medium)">
+						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Mastan.jpg" alt="" /></span>
 							<h3 style="font-size: 18px;"><a>Masoumeh Vejdannia</a></h3>
 							<p style="font-size: 14px;">CTO</p>
 						</div>
-						<div class="4u 6u$(medium)">
+						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Kyle.jpg" alt="" /></span>
 							<h3 style="font-size: 18px;"><a>Kyle Lee</a></h3>
 							<p style="font-size: 14px;">CMO/CFO</p>
 						</div>
-						<div class="4u 6u$(medium)">
+						<div class="3u 6u$(medium)">
 							<span class="image fit"><img src="images/EIA_team/Livia.jpg" alt="" /></span>
 							<h3 style="font-size: 18px;"><a>Livia Barros Ferreira</a></h3>
 							<p style="font-size: 14px;">CDO</p>
