--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
 	<body>
 
 			<!-- Header -->
-			<section id="header" >
+			<section id="header" style="height: 700px;">
 				<div class="inner">
-					<img src="images/logo-bs-ai-2.svg" alt="logo" />
-					<h1 style="color: black;">BreastScreening-AI</h1>
-					<p style="color: black;">Innovating Early Detection of Breast Cancer, Saving Lives.<br/>
-					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
-					</ul>
+					<h2 style="color: black;">     </h2>
+					<img src="images/logo3-bs-ai.svg" alt="logo" />
+					<h2 style="color: black;">BreastScreening-AI</h2>
+					<p style="color: black;">
+						Innovating Early Detection of Breast Cancer, Saving Lives.<br />
+						<ul class="actions">
+							<li><a href="#one" class="button scrolly" style="background-color: #8bc4a4; color: white; border-radius: 20px;">Discover</a></li>
+						</ul>
 				</div>
 			</section>
 
